Fuzzing-Module/exercise1/cppcheck_report.txt
[1msimple_crash.cpp:12:1: [31merror:[39m Memory leak: ptr [memleak][0m
}
^
